fix: Change ResendVerificationEmail to a POST request
