# docs/swagger.json
@@ -259,8 +259,8 @@
                 }
             }
         },
-        "/auth/resendverificationemail/{email}": {
-            "patch": {
+        "/auth/resendverificationemail": {
+            "post": {
                 "consumes": [
                     "application/json"
                 ],
@@ -273,11 +273,13 @@
                 "summary": "Resend verification email",
                 "parameters": [
                     {
-                        "type": "string",
                         "description": "Resend verification email to the user with the given email",
-                        "name": "email",
-                        "in": "path",
-                        "required": true
+                        "name": "ResendVerificationEmailInput",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.ResendVerificationEmailInput"
+                        }
                     }
                 ],
                 "responses": {
@@ -508,6 +510,17 @@
     },
     "definitions": {
         "models.ForgotPasswordInput": {
+            "type": "object",
+            "required": [
+                "email"
+            ],
+            "properties": {
+                "email": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.ResendVerificationEmailInput": {
             "type": "object",
             "required": [
                 "email"
