# models/helper_non_db_model.go
@@ -31,10 +31,14 @@ type UserResponse struct {
 }
 
 type ForgotPasswordInput struct {
-	Email string `json:"email" binding:"required"`
+	Email string `json:"email" binding:"required,email"`
 }
 
 type ResetPasswordInput struct {
 	Password        string `json:"password" binding:"required,min=8"`
 	PasswordConfirm string `json:"passwordConfirm" binding:"required,min=8"`
+}
+
+type ResendVerificationEmailInput struct {
+	Email string `json:"email" binding:"required,email"`
 }
