# routes/auth_routes.go
@@ -24,7 +24,7 @@ func (rc *AuthRouteController) AuthRoute(rg *gin.RouterGroup) {
 	router.GET("/refresh", rc.authController.RefreshAccessToken)
 	router.GET("/logout", middleware.DeserializeUser(), rc.authController.LogoutUser)
 	router.GET("/verifyemail/:verificationCode", rc.authController.VerifyEmail)
-	router.PATCH("/resendverificationemail/:email", rc.authController.ResendVerificationEmail)
+	router.POST("/resendverificationemail", rc.authController.ResendVerificationEmail)
 	router.GET("/usernameavailable/:username", rc.authController.CheckUsernameAvailability)
 	router.POST("/forgotpassword", rc.authController.ForgotPassword)
 	router.PATCH("/resetpassword/:resetToken", rc.authController.ResetPassword)
